виды товаров подсветка при наведении

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,3 +16,10 @@ footer a:hover{
     color: #ffffff;
     text-decoration: underline;
 }
+.type-of-goods{
+    border: 1px solid #c0c0c0;
+    border-radius: 5px;
+}
+.type-of-goods:hover{
+    border: 1px solid #d9534f;
+}
